# vcluster-argocd-enroller

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  BUILDING.md  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  README.md  Taskfile.yml  deploy.yml  manifest  pyproject.toml  pytest.ini
.beads/: config.yaml  issues.jsonl  metadata.json
.github/: cliff.toml  dependabot.yml  release-drafter.yml
.github/workflows/: changelog.yaml  ci.yaml  dev.yaml  release-drafter.yaml  release.yaml
helm/vcluster-argocd-enroller/: Chart.yaml  README.md  values.yaml
helm/vcluster-argocd-enroller/templates/: NOTES.txt  _helpers.tpl  clusterrole.yaml  clusterrolebinding.yaml  configmap.yaml  deployment.yaml  hpa.yaml  networkpolicy.yaml  poddisruptionbudget.yaml  serviceaccount.yaml
src/vcluster_argocd_enroller/: __init__.py  __main__.py  cli.py  operator.py
tests/: __init__.py  conftest.py  test_e2e.py  test_operator_integration.py
