[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vcluster-argocd-enroller"
version = "0.1.0"
description = "Kubernetes operator that automatically enrolls vCluster instances in ArgoCD"
readme = "README.md"
requires-python = ">=3.13"
license = {text = "MIT"}
authors = [
    {name = "Andrew Rothstein", email = "andrew.rothstein@gmail.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Clustering",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "kubernetes>=31.0.0",
    "pyyaml>=6.0",
    "kopf[uvloop]>=1.37.2",
    "cyclopts>=2.9.0",
    "rich>=13.7.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.8.0",
    "build>=1.0.0",
    "wheel>=0.42.0"
]

[project.scripts]
vcluster-argocd-enroller = "vcluster_argocd_enroller.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/vcluster_argocd_enroller"]

[tool.uv]
dev-dependencies = [
    "mypy>=1.17.1",
    "types-pyyaml>=6.0.12.20250822",
]

[tool.ruff]
line-length = 120
target-version = "py313"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.13"
ignore_missing_imports = true
strict = false

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
