[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vcluster-argocd-enroller"
version = "1.1.1"
description = "Kubernetes operator that automatically enrolls vCluster instances in ArgoCD"
readme = "README.md"
requires-python = ">=3.13"
license = {text = "MIT"}
authors = [
    {name = "Andrew Rothstein", email = "andrew.rothstein@gmail.com"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Clustering",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "kubernetes>=35.0.0",
    "pyyaml>=6.0.3",
    "kopf[uvloop]>=1.44.5",
    "cyclopts>=4.10.2",
    "rich>=15.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.10",
    "build>=1.4.3",
    "wheel>=0.46.3"
]

[project.scripts]
vcluster-argocd-enroller = "vcluster_argocd_enroller.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/vcluster_argocd_enroller"]

[dependency-groups]
dev = [
    "mypy>=1.20.1",
    "types-pyyaml>=6.0.12.20260408",
]

[tool.ruff]
line-length = 120
target-version = "py313"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.13"
ignore_missing_imports = true
strict = false

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short --strict-markers"
markers = [
    "integration: Integration tests that require a Kubernetes cluster",
    "e2e: End-to-end tests that require a real Kubernetes cluster with ArgoCD",
    "slow: Tests that take a long time to run",
    "cli: Tests for CLI commands",
    "operator: Tests for operator functionality",
]
